stylesheet.less
/* ... */
h6 {
	font-family:@font-swatch6-font-family;
	font-weight: @font-swatch6-font-weight;
	color:@font-swatch6-color;
	line-height:@font-swatch6-line-height;
	letter-spacing: @font-swatch6-letter-spacing;
	font-size: @font-swatch6-font-size;
	a {
		font-family:@font-swatch6-font-family;
		font-weight: @font-swatch6-font-weight;
		line-height:@font-swatch6-line-height;
		letter-spacing: @font-swatch6-letter-spacing;
		font-size: @font-swatch6-font-size;
	}
}

.widget.companyname {
	font-family:@font-swatch10-font-family;
	font-weight: @font-swatch10-font-weight;
	color:@font-swatch10-color;
	line-height:@font-swatch10-line-height;
	letter-spacing: @font-swatch10-letter-spacing;
	font-size: @font-swatch10-font-size;
	a {
		color:@font-swatch10-color;
		font-family:@font-swatch10-font-family;
		font-weight: @font-swatch10-font-weight;
		line-height:@font-swatch10-line-height;
		letter-spacing: @font-swatch10-letter-spacing;
		font-size: @font-swatch10-font-size;
	}
}

p,
.contactform label,
.twitter ul li a,
.twitter ul li time,
.signupform label {
	font-family:@font-swatch5-font-family;
	font-weight: @font-swatch5-font-weight;
	color:@font-swatch5-color;
	line-height:@font-swatch5-line-height;
	letter-spacing: @font-swatch5-letter-spacing;
	font-size: @font-swatch5-font-size;
}

blockquote {
	font-style: italic;
	font-size: bkscale(@font-swatch5-font-size, 1.2);
	background: lighten(@color-swatch2, 50%);
	border-radius: 2px;
	&:before {
		left: 8px;
		color: @color-swatch2;
	}
}

a,
.widget.twitter a,
.widget.twitter ul li a,
.widget.twitter ul li span a {
	color: @color-swatch2;
	text-decoration: none;
	&:hover {
		color: darken(@color-swatch2, 30%);
		text-decoration: none;
	}
}

.main {
	clear: both;
	padding: 10px 40px;
	h1, h2, h3, h4, h5 ,h6 {
		a {
			text-decoration: none;
		}
	}
}

.page-wrap {
	background-color: @color-swatch1;
	float: left;
	width: 70%;
	margin-left: 30%;
	min-height: 100%;
	box-shadow: 0 -1px 2px fadeout(@color-swatch4, 40%);
}

hr.line {
	background-color: lighten(@color-swatch5, 50%)
}

// 2. Header
.template-header {
	padding: 40px;
	text-align: center;
	position: fixed;
	overflow-x: hidden;
	overflow-y: scroll;
	float: left;
	left: 0;
	height: 100%;
	width: 30%;
	color: @color-swatch1;
	background-color: fadeout(@color-swatch2, 50%);
	text-shadow: 0 1px 2px fadeout(@color-swatch4, 40%);
	.widget.profile,
	.bk-profile-address p, 
	.bk-profile-email a, 
	.twitter-content p   {
		font-family:@font-swatch9-font-family;
		font-weight: @font-swatch9-font-weight;
		color:@font-swatch9-color;
		line-height:@font-swatch9-line-height;
		letter-spacing: @font-swatch9-letter-spacing;
		font-size: @font-swatch9-font-size;
	}
	.twitter-content a {
		color:@font-swatch9-color;
		text-decoration: underline;
	}
	.widget.profile .bk-profile-socialicons span a {
		background-color: transparent;
		border: none;
		-webkit-filter: drop-shadow(0 0 2px fadeout(@color-swatch4, 30%));
		-webkit-transition: .2s;
		&:hover {
			background-color: transparent;
			border: none;
			-webkit-filter: drop-shadow(0 0 2px fadeout(@color-swatch1, 30%));
		}
	}
}

.feature-btn {
	display: block;
}

.widget.feature .feature-bgimg .content button.btn {
	border: 1px solid @font-swatch9-color;
	color: @font-swatch9-color;
	background-color: transparent;
	&:hover {
		border-color: darken(@font-swatch9-color, 10%);
		color: darken(@font-swatch9-color, 10%);
	}
}

.header-feature {
	position: relative;
	overflow: hidden;
}
.widget.feature h2 {
	padding-bottom: 0;
}
.widget.feature .feature-bgimg .content h3 {
	display: inline-block;
	text-indent: @font-swatch9-letter-spacing;
	padding-top: 10px;
}

.widget.feature .feature-bgimg .content {
	text-shadow: 0 0 8px fadeout(@color-swatch5, 30%);
	display: block;
	padding: 75px 40px 0;
}

// 3. Navigation
.nav {
	position: relative;
	padding: 0 40px;
	ul {
		display: block;
		width: 100%;
		padding: 0;
		margin: 0;
		list-style: none;
		border-bottom: 1px solid darken(@color-swatch1, 10%);
	}
	li {
		display: inline-block;
	}
	a {
		padding: 20px 25px;
		display: inline-block;
	}
}

.template-nav {
	background-color: @color-swatch1;
	min-height: 49px;
}

.widget .extendednavigation {
	margin: 10px 0;
	.clearfix
}

.widget .extendednavigation ul {
	float: none;
	li {
		float: none;
		display: inline-block;
		a, > .text {
			padding: 5px 20px 5px;
			font-family:@font-swatch6-font-family;
			font-weight: @font-swatch6-font-weight;
			color: @font-swatch6-color;
			line-height:@font-swatch6-line-height;
			letter-spacing: @font-swatch6-letter-spacing;
			font-size: @font-swatch6-font-size;
			&:hover {
				color: @font-swatch6-color-hover;
			}
		}
	}
	li.folder:after {
		right: 6px;
		top: 48%;
		border-top-color: @font-swatch6-color;
	}
	li.folder:hover {
		ul {
			min-width: 150px;
			left: 0px;
			top: 45px;
		}
		a {
			padding: 10px 20px;
			&:hover {
				color:@color-swatch2;
			}
		}
		&:after {
			border-top-color: @color-swatch4;
		}
	}
}

.widget .extendednavigation a.pull {
	width: 30px;
	height: 30px;
	top: 10px;
	right: 18px;
	@media @tablet {
		width: 30px;
		height: 30px;
		top: 0px;
		right: 6px;
	}
	&:after {
		background-color: @color-swatch2;
		box-shadow: 0 6px 0 @color-swatch2, 0 12px 0 @color-swatch2;
		left: 4px;
		top: 7px;
		width: 22px;
	}
}


// 4. Home
// Nothing to see here

// 5. Menu
.widget.menu {
	border: none;
	h1 {
		position: relative;
		padding-bottom: 0;
	}
	h2 {
		position: relative;
		display: inline-block;
	}
	.menu-header {
		margin-bottom: 14px;
		float: left;
		width: 100%;
		overflow: hidden;
		p {
			position: relative;
			display: inline-block;
			font-family: @font-swatch2-font-family;
			font-size: bkscale(@font-swatch6-font-size, 0.85);
			letter-spacing:@font-swatch6-letter-spacing;
			font-weight: @font-swatch2-font-weight;
			background: @color-swatch1;
			color: @font-swatch2-color;
		}
	}
}

.menu-items {
	clear: both;
}
/* ... */

